- integrated redis and implemented proper sign out
