# internal/DTO/requests.go
@@ -34,3 +34,8 @@ type SignInRequest struct {
 type TokenRefreshRequest struct {
 	RefreshToken string `json:"refresh_token"`
 }
+
+type SignOutRequest struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
